@@ -5,5 +5,9 @@ xfce/gtk-engines
 xfce/clearlooks-phenix-theme
 xfce/xfwm4-theme-axe
 xfce/elementary-xfce
+xfce/microlinux-wallpapers
+x/eurostile-fonts
+x/google-droid-fonts
+x/webcore-fonts
 
 
