@@ -1,8 +1,8 @@
 #!/bin/sh
 
-# Slackware build script for elementary-xfce
+# Slackware build script for eurostile-fonts
 
-# Written by Niki Kovacs <info@microlinux.fr>
+# Written by Niki Kovacs <info@microlinux.fr)
 #
 # All rights reserved.
 #
@@ -23,28 +23,28 @@
 #  OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF
 #  ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 
-PRGNAM=elementary-xfce      
-VERSION=${VERSION:-20141217}  
+PRGNAM=eurostile-fonts
+VERSION=${VERSION:-1.0}	 
 BUILD=${BUILD:-1}
-TAG=${TAG:-_microlinux}   
+TAG=${TAG:-_microlinux}		
 
-ARCH=noarch
+ARCH=noarch 
 
 CWD=$(pwd)
-TMP=${TMP:-/tmp/microlinux} 
+TMP=${TMP:-/tmp/microlinux}	
 PKG=$TMP/package-$PRGNAM
-OUTPUT=${OUTPUT:-/tmp}  
+OUTPUT=${OUTPUT:-/tmp}	
 
-set -e 
-
-wget -c http://www.microlinux.fr/download/$PRGNAM-snapshot-$VERSION.tar.bz2
+wget -c http://www.microlinux.fr/download/Eurostile.zip
 
 rm -rf $PKG
 mkdir -p $TMP $PKG $OUTPUT
 cd $TMP
-rm -rf $PRGNAM
-tar xvf $CWD/$PRGNAM-snapshot-$VERSION.tar.bz2 || exit 1
-cd $PRGNAM || exit 1
+rm -rf Eurostile
+unzip $CWD/Eurostile.zip || exit 1
+
+cd Eurostile
+
 chown -R root:root .
 find . \
  \( -perm 777 -o -perm 775 -o -perm 711 -o -perm 555 -o -perm 511 \) \
@@ -52,30 +52,20 @@ find . \
  \( -perm 666 -o -perm 664 -o -perm 600 -o -perm 444 -o -perm 440 -o -perm 400 \) \
  -exec chmod 644 {} \;
 
-mkdir -p $PKG/usr/share/icons
-
-cp -a elementary-xfce \
-      elementary-xfce-dark \
-      elementary-xfce-darker \
-      elementary-xfce-darkest \
-      $PKG/usr/share/icons/
-
-# Slackware branding (cannibalized from Faenza icon theme)
-find $PKG/usr/share/icons/ -name 'start-here*' | xargs rm -f
-find $PKG/usr/share/icons/ -name 'distributor-logo*' | xargs rm -f
-tar xvzf $CWD/slackware-branding.tar.gz -C $PKG/usr/share/icons/elementary-xfce/
+mkdir -p $PKG/usr/share/fonts/TTF
+cp -a *.ttf $PKG/usr/share/fonts/TTF/
 
 mkdir -p $PKG/usr/doc/$PRGNAM-$VERSION
-cp -a README elementary-xfce/{AUTHORS,CONTRIBUTORS,LICENSE} \
-  $PKG/usr/doc/$PRGNAM-$VERSION
 cat $CWD/$PRGNAM.SlackBuild > $PKG/usr/doc/$PRGNAM-$VERSION/$PRGNAM.SlackBuild
 
 mkdir -p $PKG/install
 cat $CWD/slack-desc > $PKG/install/slack-desc
+cat $CWD/doinst.sh > $PKG/install/doinst.sh
 
 cd $PKG
 /sbin/makepkg -l y -c n $OUTPUT/$PRGNAM-$VERSION-$ARCH-$BUILD$TAG.${PKGTYPE:-txz}
 
 # Cleanup
-cd $TMP
-rm -rf $PRGNAM $PKG
+cd $TMP          
+rm -rf Eurostile/ $PKG
+
