@@ -1,0 +1,12 @@
+               |-----handy-ruler------------------------------------------------------|
+eurostile-fonts: eurostile-fonts (true type fonts)
+eurostile-fonts:
+eurostile-fonts: Eurostile is one of the most important designs from the Italian font
+eurostile-fonts: designer Aldo Novarese. It works well for headlines and small bodies
+eurostile-fonts: of text.
+eurostile-fonts: 
+eurostile-fonts: 
+eurostile-fonts: 
+eurostile-fonts: 
+eurostile-fonts: 
+eurostile-fonts: Package created by Niki Kovacs <info@microlinux.fr>
