@@ -1,0 +1,12 @@
+                  |-----handy-ruler------------------------------------------------------|
+google-droid-fonts: google-droid-fonts (font family from Google's Android project)
+google-droid-fonts:
+google-droid-fonts: The Droid typeface family was designed in the fall of 2006 by
+google-droid-fonts: Ascender's Steve Matteson, as a commission from Google to create
+google-droid-fonts: a set of system fonts for its Android platform.  The goal was to
+google-droid-fonts: provide optimal quality and comfort on a mobile handset when
+google-droid-fonts: rendered in application menus, web browsers, and other screen text.
+google-droid-fonts:
+google-droid-fonts: 
+google-droid-fonts:
+google-droid-fonts: Package created by Niki Kovacs <info@microlinux.fr>
