@@ -1,0 +1,12 @@
+                     |-----handy-ruler------------------------------------------------------|
+microlinux-wallpapers: microlinux-wallpapers (custom wallpapers)
+microlinux-wallpapers:
+microlinux-wallpapers: This package contains a collection of wallpapers for the Microlinux
+microlinux-wallpapers: Enterprise Desktop.
+microlinux-wallpapers:
+microlinux-wallpapers: 
+microlinux-wallpapers: 
+microlinux-wallpapers: 
+microlinux-wallpapers:
+microlinux-wallpapers:
+microlinux-wallpapers: Package created by Niki Kovacs <info@microlinux.fr>
